<resources>
    <string name="app_name">Notes App</string>
    <string name="welcome_to">Welcome To App Meeting</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="email">Email</string>
    <string name="you_email_com">you@email.com</string>
    <string name="password">Password</string>
    <string name="password_hint">• • • • • •</string>
    <string name="sign_in">Sign In</string>
    <string name="not_account">Dont\'n have an account</string>
    <string name="sign_up">Sign up</string>
    <string name="sing_up">Sign up</string>
    <string name="we_need_a_few_details_to_get_your_account_ready">We need a few details to get your account ready</string>
    <string name="first_name">First Name</string>
    <string name="hint_first_name">Jonh</string>
    <string name="last_name">Last Name</string>
    <string name="hint_last_name">Doe</string>
    <string name="confrim_pass">Confirm password</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="sign_out">Sign Out</string>
    <string name="incoming_meeting_invitation">Incoming Meeting Invitation</string>
    <string name="sending_meeting_invitation">Sending Meeting Invitation</string>
    <string name="profile">Enter the information you want to change</string>
    <string name="button_confirm">Confirm</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="welcom_meeting">Welcom Meeting</string>
</resources>